# omada-migrator

./: .gitignore  REQUIREMENTS.md  pyproject.toml
src/omada_migrator/: __main__.py  api_client.py  app.py  auth.py  config.py  diff.py  quirks.py  registry.py  schema_meta.py  snapshot.py  spec_store.py  write_engine.py
src/omada_migrator/static/: index.html
tests/: test_api_client.py  test_app.py  test_auth.py  test_config.py  test_diff.py  test_quirks.py  test_registry.py  test_snapshot.py  test_tls.py  test_write_engine.py
tests/fixtures/: openapi_mini.json
